# rust_swig

./: .gitignore  .gitmodules
android-example/: .env.android  Cargo.toml  build.gradle  build.rs  gradle.properties
android-example/.cargo/: config
android-example/app/: build.gradle  dotenv.gradle
android-example/app/src/main/java/net/akaame/myapplication/: MainActivity.java  MyApplication.java
android-example/app/src/main/res/layout/: activity_main.xml  content_main.xml
android-example/gradle/wrapper/: gradle-wrapper.properties
android-example/src/: android_c_headers.rs  java_glue.rs  java_glue.rs.in  lib.rs
